<resources>
    <string name="app_name">QuranAPI</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="makkiyyah">Makkiyyah</string>
    <string name="the_opening">The Opening</string>
    <string name="_7_verse">7 Verse</string>
    <string name="order_to_1">Order to 1</string>
    <string name="search_chapter">Search Chapter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_user">Login User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
</resources>