<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Elevated"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/chapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/revelation_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makkiyyah"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/translated_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_opening"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/chapter_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/verses_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_verse"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/translated_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/revelation_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_to_1"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/verses_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>